@@ -1,5 +1,10 @@
 2017-01-16  Edward Jones  <ed.jones@embecosm.com>
 
+	* script/generate-builds.py: Do not toggle passed which aren't
+	supported in the earliest mageec-supported version (4.5)
+
+2017-01-16  Edward Jones  <ed.jones@embecosm.com>
+
 	* script/feature-extract.py: Update formatting.
 	* script/generate-builds.py: Likewise.
 	* script/mageec.py: Likewise.
